# LearningOpenGL

./: CMakeLists.txt
src/: fragmentShader.fs  glad.c  glad.h  main.cpp  shader.h  vertexShader.vs
